--- a/templates/donate.html
+++ b/templates/donate.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Donate to Ben Steel</h1>
+    <div id="total-donations">
+        <h2>Total Donations: ${{ total_donations }}</h2>  <!-- This will display the total amount -->
+    </div>
     <form id="donation-form">
         <label for="amount">Enter donation amount:</label>
         <input type="number" id="amount" name="amount" min="1" max="500" required>
